# Lamp-ESP32-S3

./: .gitignore  README.md  build_log.txt  sdkconfig  sdkconfig.old  硬件连接表.md
.cache/clangd/index/: A2NLSF.c.E64E76E07199E9FC.idx  API.h.7FB424348E3DA20E.idx  CNG.c.CA4156FDB88F34D3.idx  HP_variable_cutoff.c.CF146C9F5544E7D9.idx  Inlines.h.8506F2ABE1A4A73D.idx  LPC_analysis_filter.c.7FF403221A4178C6.idx  LPC_fit.c.5E38CF92A3AE1F39.idx  LPC_inv_pred_gain.c.9E3A6224D38DD332.idx  LP_variable_cutoff.c.8C429570CFDF09A4.idx  LTP_analysis_filter_FIX.c.C7C27678B8441580.idx  LTP_scale_ctrl_FIX.c.49364E5AD6499C16.idx  MacroCount.h.421325BED79C925E.idx  MacroDebug.h.F0714FA9802A3D36.idx  NLSF2A.c.691141279CF9ABDB.idx  NLSF_VQ.c.4F5F6A63EF633598.idx  NLSF_VQ_weights_laroia.c.8BC1FD1EA3584521.idx  NLSF_decode.c.47A0898E703AF9CF.idx  NLSF_del_dec_quant.c.5E610587FF85B1C3.idx  NLSF_encode.c.4934BA96B03F470C.idx  NLSF_stabilize.c.825E13B1162B5A40.idx  NLSF_unpack.c.13E38A41FDA0A603.idx  NSQ.c.4404CD528A5DD4DC.idx  NSQ.h.ED5F41D3B1E446C7.idx  NSQ_del_dec.c.9D58315AFD29FA4C.idx  PLC.c.D673C1FB0047EEA4.idx  PLC.h.539FC656C8593008.idx  SigProc_FIX.h.80ED4716D46A3282.idx  SigProc_FIX_lx7.h.2FACCB1A168A66A0.idx  VAD.c.E9E13D751C65E326.idx  VQ_WMat_EC.c.606117C1ADED4769.idx  _kiss_fft_guts.h.5C8EAF6EF7B1CAED.idx  adc_mic.c.EB6306787D4A5D2D.idx  adc_mic.h.17B1A161558D0EB3.idx  adler32.c.FF5F8DD40B516F1E.idx  aes3_tie_log.c.F59C7DBE4DA2EB04.idx  afblue.c.D852441D7079C02C.idx  afblue.h.FD6F50DD291C6D45.idx  afcjk.c.0AC0D696DD0FA0A4.idx  afcjk.h.FF318D65E3A0B3B2.idx  afcover.h.B448E66FFA657682.idx  (+2077 more)
docs/: WiFi_Provision_Guide.md
examples/: wifi_provision_example.cc
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  assets.cc  assets.h  idf_component.yml  main.cc  ota.cc  ota.h  system_info.cc
main/assets/: lang_config.h
main/audio/: README.md  audio_codec.cc  audio_codec.h  audio_service.cc  audio_service.h
main/audio/driver/: es8374_audio_codec.cc  es8388_audio_codec.cc  es8389_audio_codec.cc
main/audio/processors/: afe_audio_processor.cc  afe_audio_processor.h
main/audio/transport/: audio_afe_ws_sender.cc  audio_afe_ws_sender.h  audio_uploader.c  audio_uploader.h
main/boards/atk-dnesp32s3/: atk_dnesp32s3.cc  config.h
main/boards/common/: afsk_demod.cc  board.cc  board.h  dual_network_board.cc  ml307_board.cc  power_save_timer.cc  pwm_test.cc  pwm_test.h  sleep_timer.cc  wifi_board.cc  wifi_board.h  wifi_connect.c  wifi_connect.cc  wifi_connect.h
main/bsp/AlarmMusic/: alarm_music.c  alarm_music.h
main/bsp/App/: app_controller.c  app_controller.h
main/bsp/HTTP/: http_request.c  http_request.h
main/bsp/Input/: xl9555_keys.c
main/bsp/RTC/: rtc_service.c
main/bsp/SmartLight/: smart_light_backlight_bridge.cc  smart_light_backlight_bridge.h  smart_light_controller.cpp  smart_light_controller.h
main/bsp/UART/: uart.h
main/bsp/radar_protocol/: radar_protocol.c  radar_protocol.h
main/bsp/sd_audio/: audio_hw.c  audio_hw.h  audio_player.c  audio_player.h  audio_sdcard.c  audio_sdcard.h
main/docs/: 睡眠评分标准.xlsx
main/network/: audio_afe_ws_sender.cc  audio_uploader.c  audio_uploader.h  protocol.h  websocket_protocol.cc
main/protocols/: protocol.cc  protocol.h
main/pwm/: pwm_test.cc
main/voice/: audio_codec.cc  audio_codec.h  audio_service.cc  audio_service.h
main/voice/driver/: es8388_audio_codec.cc  es8388_audio_codec.h
main/voice/processors/: no_audio_processor.h
